--- a/index.html
+++ b/index.html
@@ -9,17 +9,45 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script>
         const DELAY_TIME = 1800;
+
+        function showStory(i) {
+            if (i >= storyLines.length) return;
+            $('#story').text(storyLines[i]);
+            $('#story')
+            .fadeIn(DELAY_TIME*2)
+            .delay(DELAY_TIME/2)
+            .fadeOut(DELAY_TIME*2, function () {
+                showStory(i+1);
+            });
+        }
+
+        function hideGreetings() {
+            $('#dear').fadeOut(DELAY_TIME, function() {
+                $('#hbd')
+                .stop()
+                .fadeOut(DELAY_TIME)
+                .delay(DELAY_TIME/2, function() { showStory(0);});
+            });
+        }
+
+        function showhbd() {
+            $('#hbd')
+            .fadeIn(DELAY_TIME*3.2)
+            .delay(DELAY_TIME*2, hideGreetings);
+        }
+
         function onClickMe() {
-            // $('#hbd-song')[0].play();
+            $('#hbd-song')[0].play();
+            $('#mask').fadeOut(DELAY_TIME/2);
             $('#stars-container').show();
-            $('#mask').fadeOut(DELAY_TIME);
+            $('#dear').fadeIn(DELAY_TIME*2.4, showhbd);
         }
     </script>
 </head>
 <body class="bg-gray-900 text-slate-50">
     <div id="mask">
         <div id="start-button" onclick="onClickMe()">
-            Hey, click me!
+            Click me!
         </div>
     </div>
     <div id="stars-container">
@@ -28,46 +56,31 @@
         <div id='stars3'></div>
     </div>
     <div id='title'>
-        <span>
-            Dear
-        </span>
-        <span>
-            XXX,
+        <span id="dear">
+            Hey
         </span>
         <br>
-        <span class="story">
-            HAPPY BIRTHDAY TO YOU!!
+        <span id="hbd">
+            HAPPIEST BIRTHDAY TO YOU!!
         </span>
-    </div>
-    <div id="story">
-        <span class="story">
-            There is something about you that has captured you permamently in my mind and my heart.
-        </span>
-        <span class="story">
-            Many ups and downs, some days crying and panicing, some days laughing crazy.
-        </span>
+        <div id="story">
+        </div>
     </div>
      <audio id="hbd-song">
-        <source src="assets/happy-birthday-instrumental-compressed.mp3" type="audio/ogg">
+        <source src="assets/happy-birthday-instrumental-compressed.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 <script>
-    (function() {
-
-      var quotes = $(".story");
-      var quoteIndex = -1;
-
-      function showNextQuote() {
-        ++quoteIndex;
-        quotes.eq(quoteIndex % quotes.length)
-          .fadeIn(DELAY_TIME)
-          .delay(DELAY_TIME)
-          .fadeOut(DELAY_TIME, showNextQuote);
-      }
-
-      showNextQuote();
-
-    })();
+    var storyLines = `On this special day,
+to the funniest, prettiest and the smartest person
+who brightens up my day,
+I wish a year full of joy, blessings and fond memories.
+May each day bring you closer
+to your dreams and the peace you've wished for...
+guffadi मुन्छेको गफ सधैँ सुन्न पाम्
+सधैँ हाँसेको, खुशीसाथ बाँचेको देख्न पाम््
+यति भन्दै दुइ शब्द यहीँ रोकेँ
+`.split("\n");
 </script>
 </body>
 </html>
